# rabbit_mq

./: consumer.py  pyproject.toml
