[tool.poetry]
name = "rabbit-mq"
version = "0.1.0"
description = ""
authors = ["jorgebarcelos <jorgebarcelos.faria@gmail.com>"]
readme = "README.md"
packages = [{include = "rabbit_mq"}]

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
